fix header alignment

--- a/src/App/components/PageHeader/PageHeader.module.css
+++ b/src/App/components/PageHeader/PageHeader.module.css
@@ -89,6 +89,7 @@
 }
 
 .logo_container {
+    width: 100%;
     height: 60px;
     display: flex;
     flex-direction: row;
